feat: add restock feed

--- a/apps/aritzia-scanner/src/views/partials/nav.ejs
+++ b/apps/aritzia-scanner/src/views/partials/nav.ejs
@@ -2,6 +2,7 @@
   <a href="/">Home (Newest)</a>
   <a href="/products">All Products</a>
   <a href="/sale" class="nav-sale-link">Sale</a>
+  <a href="/restocks">Restocks</a>
   <a href="/colors">Colors</a>
   <a href="/discontinued">Discontinued</a>
 </div>
